# fracturedjson-rs

./: Cargo.toml  README.md
src/: formatter.rs  model.rs  options.rs  parser.rs  tokenizer.rs
tests/: always_expand_formatting.rs  comment_formatting.rs  east_asian_wide_characters.rs  ending_comma_formatting.rs  helpers.rs  jsonl.rs  length_and_complexity.rs  number_formatting.rs  object_serialization.rs  pad_formatting.rs  property_alignment.rs  table_formatting.rs  top_level_items.rs  universal.rs
