[package]
name = "fracturedjson"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust port of FracturedJsonJs: human-friendly JSON formatter with optional comment support."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
unicode-width = "0.1"
